--- a/aureumvictoria.html
+++ b/aureumvictoria.html
@@ -48,7 +48,7 @@
 <!-- /Google Analytics -->
 
 
-  <section class="menu1" id="menu-n" data-rv-view="129">
+  <section class="menu1" id="menu-n" data-rv-view="19">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container-fluid">
@@ -68,7 +68,7 @@
                         <span class="hamburger-icon"></span>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">EXCHANGE</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">securus corefiles</a><a class="dropdown-item" href="http://www.securuscoin.org">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org">Aureum Victoria<br></a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">exchanges</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="#">Image/content slider</a><a class="dropdown-item" href="#">Contact forms</a><a class="dropdown-item" href="#">Image gallery</a><a class="dropdown-item" href="#">Mobile menu</a><a class="dropdown-item" href="#">Google maps</a><a class="dropdown-item" href="#">Social buttons</a><a class="dropdown-item" href="#">Google fonts</a><a class="dropdown-item" href="#">Video background</a></div></div></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="true">TOOLS</a><div class="dropdown-menu"><a class="dropdown-item" href="http://securuscoin.org">Forum</a><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Contact us</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">HOME</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="http://explorer.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="pools.html">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://paper.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="exchange.html">EXCHANGE</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="true">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://github.com/JOXW/securuscoin/releases" target="_blank">securus corefiles</a><a class="dropdown-item" href="https://github.com/JOXW/securus-wallet/releases" target="_blank">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org/av.exe" target="_blank">Aureum Victoria<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a><a class="dropdown-item" href="http://map.securuscoin.org:8080/" target="_blank">Nodemap</a><a class="dropdown-item" href="developer.html">Team<br></a><a class="dropdown-item" href="http://www.securuscoin.org/paper.pdf" target="_blank">Whitepaper<br></a><a class="dropdown-item" href="aureumvictoria.html">Aureum Victoria</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <span class="close-icon"></span>
                     </button>
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section content5 mbr-background mbr-after-navbar" id="content5-r" data-rv-view="136" style="background-image: url(assets/images/mbr-1-1920x1280.jpg); padding-top: 120px; padding-bottom: 200px;">
+<section class="mbr-section content5 mbr-background mbr-after-navbar" id="content5-r" data-rv-view="23" style="background-image: url(assets/images/mbr-1-1920x1280.jpg); padding-top: 120px; padding-bottom: 200px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(230, 126, 34);">
     </div>
@@ -93,14 +93,14 @@
 
 </section>
 
-<section class="mbr-social-feed loading" id="feed-p" data-facebook="" data-facebooktoken="" data-twitter="AureumVictoria" data-posts="3" data-youtube="UCCLr4Bj6qJu82EyrMu_k-lw" data-rv-view="131" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-p" data-facebook="" data-facebooktoken="" data-twitter="AureumVictoria" data-posts="3" data-youtube="UCCLr4Bj6qJu82EyrMu_k-lw" data-rv-view="26" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-o" data-rv-view="130" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-o" data-rv-view="21" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center lead"><a href="developer.html">(C) 2019 Securus&nbsp;Project</a></p>
