--- a/developer.html
+++ b/developer.html
@@ -45,7 +45,7 @@
 <!-- /Google Analytics -->
 
 
-  <section class="menu1" id="menu-c" data-rv-view="30">
+  <section class="menu1" id="menu-c" data-rv-view="38">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container-fluid">
@@ -65,7 +65,7 @@
                         <span class="hamburger-icon"></span>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">EXCHANGE</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">securus corefiles</a><a class="dropdown-item" href="http://www.securuscoin.org">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org">Aureum Victoria<br></a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">exchanges</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="#">Image/content slider</a><a class="dropdown-item" href="#">Contact forms</a><a class="dropdown-item" href="#">Image gallery</a><a class="dropdown-item" href="#">Mobile menu</a><a class="dropdown-item" href="#">Google maps</a><a class="dropdown-item" href="#">Social buttons</a><a class="dropdown-item" href="#">Google fonts</a><a class="dropdown-item" href="#">Video background</a></div></div></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="true">TOOLS</a><div class="dropdown-menu"><a class="dropdown-item" href="http://securuscoin.org">Forum</a><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Contact us</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">HOME</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="http://explorer.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="pools.html">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://paper.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="exchange.html">EXCHANGE</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="true">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://github.com/JOXW/securuscoin/releases" target="_blank">securus corefiles</a><a class="dropdown-item" href="https://github.com/JOXW/securus-wallet/releases" target="_blank">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org/av.exe" target="_blank">Aureum Victoria<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a><a class="dropdown-item" href="http://map.securuscoin.org:8080/" target="_blank">Nodemap</a><a class="dropdown-item" href="developer.html">Team<br></a><a class="dropdown-item" href="http://www.securuscoin.org/paper.pdf" target="_blank">Whitepaper<br></a><a class="dropdown-item" href="aureumvictoria.html">Aureum Victoria</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <span class="close-icon"></span>
                     </button>
@@ -78,7 +78,7 @@
 
 </section>
 
-<section class="mbr-section progressbar progressbar1 mbr-after-navbar" id="progress-bar4-f" data-rv-view="32" style="background-image: url(assets/images/undraw-developer-activity-bv83.svg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section progressbar progressbar1 mbr-after-navbar" id="progress-bar4-f" data-rv-view="40" style="background-image: url(assets/images/undraw-developer-activity-bv83.svg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.85; background-color: rgb(51, 51, 51);">
     </div>
@@ -157,7 +157,7 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section-nopadding carousel slide testimonials2 testimonials1 extTestimonials3 extTestimonials1" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="5000" data-pause="false" id="testimonials2-e" data-rv-view="37" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-slider mbr-section mbr-section-nopadding carousel slide testimonials2 testimonials1 extTestimonials3 extTestimonials1" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="5000" data-pause="false" id="testimonials2-e" data-rv-view="45" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 40px;">
 
     
 
@@ -258,7 +258,7 @@
     </div>
 </section></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-d" data-rv-view="35" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-d" data-rv-view="43" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center lead"><a href="developer.html">(C) 2019 Securus&nbsp;Project</a></p>
