--- a/tutorial.html
+++ b/tutorial.html
@@ -45,7 +45,7 @@
 <!-- /Google Analytics -->
 
 
-  <section class="menu1" id="menu-i" data-rv-view="107">
+  <section class="menu1" id="menu-i" data-rv-view="28">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container-fluid">
@@ -65,7 +65,7 @@
                         <span class="hamburger-icon"></span>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">EXCHANGE</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">securus corefiles</a><a class="dropdown-item" href="http://www.securuscoin.org">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org">Aureum Victoria<br></a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">exchanges</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="#">Image/content slider</a><a class="dropdown-item" href="#">Contact forms</a><a class="dropdown-item" href="#">Image gallery</a><a class="dropdown-item" href="#">Mobile menu</a><a class="dropdown-item" href="#">Google maps</a><a class="dropdown-item" href="#">Social buttons</a><a class="dropdown-item" href="#">Google fonts</a><a class="dropdown-item" href="#">Video background</a></div></div></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="true">TOOLS</a><div class="dropdown-menu"><a class="dropdown-item" href="http://securuscoin.org">Forum</a><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Contact us</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">HOME</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="http://explorer.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="pools.html">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://paper.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="exchange.html">EXCHANGE</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="true">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://github.com/JOXW/securuscoin/releases" target="_blank">securus corefiles</a><a class="dropdown-item" href="https://github.com/JOXW/securus-wallet/releases" target="_blank">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org/av.exe" target="_blank">Aureum Victoria<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a><a class="dropdown-item" href="http://map.securuscoin.org:8080/" target="_blank">Nodemap</a><a class="dropdown-item" href="developer.html">Team<br></a><a class="dropdown-item" href="http://www.securuscoin.org/paper.pdf" target="_blank">Whitepaper<br></a><a class="dropdown-item" href="aureumvictoria.html">Aureum Victoria</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <span class="close-icon"></span>
                     </button>
@@ -78,7 +78,7 @@
 
 </section>
 
-<section class="mbr-section content5 mbr-parallax-background mbr-after-navbar" id="content5-k" data-rv-view="109" style="background-image: url(assets/images/mbr-1920x1408.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section content5 mbr-parallax-background mbr-after-navbar" id="content5-k" data-rv-view="32" style="background-image: url(assets/images/mbr-1920x1408.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(211, 84, 0);">
     </div>
@@ -90,7 +90,7 @@
 
 </section>
 
-<section class="mbr-section accordion" id="accordion1-m" data-rv-view="120" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 100px;">
+<section class="mbr-section accordion" id="accordion1-m" data-rv-view="35" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 100px;">
 
     
         <div class="container-fluid">
@@ -133,7 +133,7 @@
         </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-j" data-rv-view="108" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-j" data-rv-view="30" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center lead"><a href="developer.html">(C) 2019 Securus&nbsp;Project</a></p>
