--- a/aureumvictoria.html
+++ b/aureumvictoria.html
@@ -10,18 +10,17 @@
   <meta name="description" content="">
   
   <title>aureum</title>
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i">
   <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i">
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/colorm-icons/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/socicon.min.css">
-  <link rel="stylesheet" href="assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   <link rel="stylesheet" href="assets/social-feed-plugin/jquery.socialfeed.css">
@@ -48,7 +47,7 @@
 <!-- /Google Analytics -->
 
 
-  <section class="menu1" id="menu-n" data-rv-view="19">
+  <section class="menu1" id="menu-n" data-rv-view="21">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container-fluid">
@@ -68,7 +67,7 @@
                         <span class="hamburger-icon"></span>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">HOME</a></li><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="http://explorer.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="pools.html">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://paper.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="exchange.html">EXCHANGE</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://github.com/JOXW/securuscoin/releases" target="_blank">securus corefiles</a><a class="dropdown-item" href="https://github.com/JOXW/securus-wallet/releases" target="_blank">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org/av.exe" target="_blank">Aureum Victoria<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a><a class="dropdown-item" href="http://map.securuscoin.org:8080/" target="_blank">Nodemap</a><a class="dropdown-item" href="developer.html">Team<br></a><a class="dropdown-item" href="http://www.securuscoin.org/paper.pdf" target="_blank">Whitepaper<br></a><a class="dropdown-item" href="aureumvictoria.html">Aureum Victoria</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="http://www.securuscoin.org">HOME</a></li><li class="nav-item"><a class="nav-link link" href="http://explorer.securuscoin.org">BLOCKEXPLORER</a></li><li class="nav-item"><a class="nav-link link" href="pools.html">POOL</a></li><li class="nav-item"><a class="nav-link link" href="http://paper.securuscoin.org">PAPERWALLET</a></li><li class="nav-item"><a class="nav-link link" href="exchange.html">EXCHANGE</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">DOWNLOADS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://github.com/JOXW/securuscoin/releases" target="_blank">securus corefiles</a><a class="dropdown-item" href="https://github.com/JOXW/securus-wallet/releases" target="_blank">GUI wallet</a><a class="dropdown-item" href="http://www.securuscoin.org/av.exe" target="_blank">Aureum Victoria<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="#" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="tutorial.html">Tutorials</a><a class="dropdown-item" href="http://www.securuscoin.org">Wiki</a><a class="dropdown-item" href="http://map.securuscoin.org:8080/" target="_blank">Nodemap</a><a class="dropdown-item" href="developer.html">Team<br></a><a class="dropdown-item" href="http://www.securuscoin.org/paper.pdf" target="_blank">Whitepaper<br></a><a class="dropdown-item" href="aureumvictoria.html">Aureum Victoria</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <span class="close-icon"></span>
                     </button>
@@ -81,7 +80,7 @@
 
 </section>
 
-<section class="mbr-section content5 mbr-background mbr-after-navbar" id="content5-r" data-rv-view="23" style="background-image: url(assets/images/mbr-1-1920x1280.jpg); padding-top: 120px; padding-bottom: 200px;">
+<section class="mbr-section content5 mbr-background mbr-after-navbar" id="content5-r" data-rv-view="25" style="background-image: url(assets/images/mbr-1-1920x1280.jpg); padding-top: 120px; padding-bottom: 200px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(230, 126, 34);">
     </div>
@@ -93,14 +92,14 @@
 
 </section>
 
-<section class="mbr-social-feed loading" id="feed-p" data-facebook="" data-facebooktoken="" data-twitter="AureumVictoria" data-posts="3" data-youtube="UCCLr4Bj6qJu82EyrMu_k-lw" data-rv-view="26" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-p" data-facebook="" data-facebooktoken="" data-twitter="AureumVictoria" data-posts="3" data-youtube="UCCLr4Bj6qJu82EyrMu_k-lw" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-o" data-rv-view="21" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer2-o" data-rv-view="23" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center lead"><a href="developer.html">(C) 2019 Securus&nbsp;Project</a></p>
@@ -111,12 +110,10 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/social-feed-plugin/codebird.min.js"></script>
   <script src="assets/social-feed-plugin/moment.js"></script>
   <script src="assets/social-feed-plugin/en-gb.js"></script>
@@ -127,6 +124,5 @@
   
   
   <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden"data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-colorButton='#ffffff' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
